# rusty-jam-fluidish

./: Cargo.toml  LICENSE  README.md  TODO.md
public/: index.html
src/: main.rs
